crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_multiple_column_sql_rrf_explicit_join_wrong_column_error_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: err.to_string()
---
HTTP error: 400 Bad Request - Failed to execute query: Schema error: No field named foobar. Valid fields are "?table?".id, "?table?".question, "?table?".answer, "?table?".subject, "?table?".reference_answer, "?table?".source, "?table?".question_embedding, "?table?"._score.
