crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_multiple_column_sql_rrf_one_subquery_fail_error_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: err.to_string()
---
HTTP error: 400 Bad Request - Failed to execute query: Error during planning: rrf needs at least 2 search queries to fuse results.
