crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_multiple_column_sql_vector_search_wrong_column_error_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: err.to_string()
---
HTTP error: 400 Bad Request - Failed to execute query: Error during planning: User function 'vector_search' is called on table 'spice.public.qs' that does not have an embedding index on 'answer' column. Indexed column(s): question.
