crates/runtime/tests/models/snapshots/integration_models__models__search__hybrid_single_column_additional_columns_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.03",
      "data": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants.",
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
    },
    {
      "_score": "0.01",
      "data": {
        "question": "How many groups of 2 are in 14?"
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "How many groups of 2 are in 14?"
        ]
      },
      "primary_key": {
        "id": 462
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "How many groups of 5 are in 25?"
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "How many groups of 5 are in 25?"
        ]
      },
      "primary_key": {
        "id": 464
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "How many groups of 3 are in 18?"
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "How many groups of 3 are in 18?"
        ]
      },
      "primary_key": {
        "id": 463
      }
    }
  ]
}
